src/app/shared/components/header/header.component.scss
:host {
  display: block;
}

.header {
  // position: fixed;
  z-index: 1000;
  top: 0;
  width: 100%;
  padding: 10px 0;
  border-radius: 5px 5px 16px 16px;
  background: linear-gradient(
    90.03deg,
    #ffc2c2 0.69%,
    #b49eeb 64.78%,
    #cff0ff 99.98%
  );
  box-shadow: 0 2px 5px rgb(0 0 0 / 10%);

  .content-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
    margin: 0 auto;
  }

  .logo {
    display: flex;

    img {
      height: 80px;
    }
  }

  .nav-menu {
    ul {
      display: flex;
      padding: 0;
      margin: 0;
      gap: 20px;
      list-style: none;

      li {
        a {
          color: #fff;
          font-size: 24px;
          font-weight: 500;
          text-decoration: none;

          &:hover {
            color: #f0f0f0;
          }
        }
      }
    }

    &.open {
      display: block;
    }
  }

  .icons {
    display: flex;
    gap: 32px;

    img {
      height: 48px;
      cursor: pointer;
    }

    .menu-icon {
      display: none;
    }
  }

  // Адаптивность
  @media (width <= 1024px) {
    .nav-menu {
      position: absolute;
      top: 100px;
      left: 0;
      display: none;
      width: 100%;
      padding: 20px 0;
      background: linear-gradient(
        90.03deg,
        #ffc2c2 0.69%,
        #b49eeb 64.78%,
        #cff0ff 99.98%
      );

      ul {
        flex-direction: column;
        align-items: center;
        gap: 15px;
      }
    }

    .icons {
      a {
        &:nth-child(1),
        &:nth-child(3) {
          display: none;
        }
      }

      .menu-icon {
        display: block;
      }
    }
  }
}

